--- a/index.html
+++ b/index.html
@@ -3,23 +3,33 @@
 <head>
 	<meta charset="utf-8">
 	<title>DJ on Youtube</title>
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
+	<!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css"> -->
 	<link rel="stylesheet" href="bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="style.css">
+	<link rel="stylesheet" href="https://code.jquery.com/ui/1.11.3/themes/flick/jquery-ui.css">
 </head>
 <body>
 <h1>DJ on Youtube</h1>
 <hr>
+<span class="glyphicon glyphicon-volume-up" aria-hidden="true"></span>
 <div class="row">
 	<div class="col-md-6">
-		<h2>Turntable 1</h2>
-		<div id="player1"></div>
+		<div class="col-md-10 col-md-offset-1" id="player1Area">
+			<h2>Turntable 1</h2>
+			<div id="player1"></div>
+		</div>
+		<div class="vertical-slider col-md-1" id="vertical-slider1"></div>	
 	</div>
+
 	<div class="col-md-6">
-		<h2>Turntable 2</h2>
-		<div id="player2"></div>
+		<div class="col-md-1 col-md-offset-1 vertical-slider" id="vertical-slider2"></div>
+		<div class="col-md-10" id="player2Area">
+			<h2>Turntable 2</h2>
+			<div id="player2"></div>
+		</div>
 	</div>
 </div>
+<div id="holizontal-slider"></div>
 <hr>
 <form class="form-inline" id="search" onsubmit="return false;">
 	<div class="form-group">
@@ -33,7 +43,7 @@
 <button class="btn btn-default" id="pause">Pause &nbsp;<span class="glyphicon glyphicon-pause" aria-hidden="true"></span></button>
 <button class="btn btn-default" id="next">Next &nbsp;<span class="glyphicon glyphicon-fast-forward" aria-hidden="true"></span></button>
 <hr>
-<p>Playlist <span class="glyphicon glyphicon-list" aria-hidden="true"></span></p>
+<p>Tracklist <span class="glyphicon glyphicon-list" aria-hidden="true"></span></p>
 <div class="row">
 	<ul id="playlist">
 	</ul>
@@ -44,6 +54,7 @@
 </ul>
 
 <script src="http://code.jquery.com/jquery-2.1.3.min.js"></script>
+<script src="https://code.jquery.com/ui/1.11.3/jquery-ui.min.js"></script>
 <script src="script.js"></script>
 <script src="https://www.youtube.com/iframe_api"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
