modify: vertical slider

--- a/index.html
+++ b/index.html
@@ -11,25 +11,23 @@
 <body>
 <h1>DJ on Youtube</h1>
 <hr>
-<span class="glyphicon glyphicon-volume-up" aria-hidden="true"></span>
 <div class="turntables-container">
 	<div class="row">
 		<div class="col-md-6">
-			<div class="col-md-10 col-md-offset-1" id="player1Area">
-				<h2>Turntable 1</h2>
-				<div id="player1"></div>
-			</div>
-			<div class="vertical-slider col-md-1" id="vertical-slider1"></div>	
+			<h2>Turntable 1</h2>
+			<div id="player1"></div>	
 		</div>
 
 		<div class="col-md-6">
-			<div class="col-md-1 col-md-offset-1 vertical-slider" id="vertical-slider2"></div>
-			<div class="col-md-10" id="player2Area">
-				<h2>Turntable 2</h2>
-				<div id="player2"></div>
-			</div>
+			<h2>Turntable 2</h2>
+			<div id="player2"></div>
 		</div>
 	</div>
+</div>
+<span class="glyphicon glyphicon-volume-up" aria-hidden="true"></span>
+<div class="vertical-sliders-container">
+	<p class="vertical-slider" id="vertical-slider1"></p>
+	<p class="vertical-slider" id="vertical-slider2"></p>
 </div>
 <div id="holizontal-slider"></div>
 <hr>
