--- a/index.html
+++ b/index.html
@@ -44,14 +44,16 @@
 <button class="btn btn-default" id="next">Next &nbsp;<span class="glyphicon glyphicon-fast-forward" aria-hidden="true"></span></button>
 <hr>
 <p>Tracklist <span class="glyphicon glyphicon-list" aria-hidden="true"></span></p>
-<div class="row">
-	<ul id="playlist">
-	</ul>
-</div>
+	<div class="row list-container">
+		<ul id="playlist">
+		</ul>
+	</div>
 <hr>
 <p>Search Result <span class="glyphicon glyphicon-search" aria-hidden="true"></span></p>
-<ul id="list">
-</ul>
+<div class="list-container">
+	<ul id="list">
+	</ul>
+</div>
 
 <script src="http://code.jquery.com/jquery-2.1.3.min.js"></script>
 <script src="https://code.jquery.com/ui/1.11.3/jquery-ui.min.js"></script>
